FSAR-44: Search hero - Fix on IE 11 - Install css vars polyfill so that variables work on IE11 - Minor styling fixes - Add Search hero to search page example

--- a/src/pattern-library/components/SearchBar/searchBar.scss
+++ b/src/pattern-library/components/SearchBar/searchBar.scss
@@ -5,11 +5,12 @@
   display: flex;
   &__label {
     @include body;
-    display: block;
+    display: flex;
     position: absolute;
-    align-self: center;
+    align-items: center;
     z-index: 1;
     left: 2rem;
+    height: 100%;
   }
   &__box {
     @include body;
